cabal-version:      3.0
name:               pandoc-step-filter
version:            0.1.0.0
-- synopsis:
-- description:
homepage:           https://github.com/bgamari/pandoc-step-filter
license:            BSD-3-Clause
license-file:       LICENSE
author:             Ben Gamari
maintainer:         ben@smart-cactus.org
copyright:          (c) 2023 Ben Gamari
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable pandoc-step-filter
    import:           warnings
    main-is:          Main.hs
    build-depends:    base >=4.16 && <4.20,
                      containers,
                      text,
                      pandoc-types >=1.22 && <1.24
    hs-source-dirs:   app
    default-language: Haskell2010
